<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scroll_playvideo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/layout_dissmiss"
        android:orientation="vertical">
<!--        <WebView-->
<!--            android:scrollbars="none"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            android:background="@color/black"-->
<!--            android:layout_width="fill_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:id="@+id/vv_playVideo"/>-->
        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/youtube_playerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:enableAutomaticInitialization="false"
            app:videoId=""
            app:autoPlay="false" />
        <LinearLayout
            android:layout_marginHorizontal="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_title_video"
                android:layout_marginTop="6dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text_title_load"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_view_video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="View Loading"/>
                <TextView
                    android:layout_marginLeft="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:text="...xem thêm"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/img_thumbnail_channel"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center_vertical"
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:src="@color/black"
                    app:shapeAppearanceOverlay="@style/rounde"/>
                <LinearLayout
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tv_title_channel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:text="Channel"/>
                    <TextView
                        android:id="@+id/tv_subscribe"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:textSize="12sp"
                        android:text="Sub Loading..."/>
                </LinearLayout>
                <Button
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@drawable/bgr_sub"
                    android:text="Đăng Ký"
                    android:textSize="12dp"
                    android:paddingHorizontal="12dp"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_marginHorizontal="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <HorizontalScrollView
                    android:id="@+id/scrollniew_h"
                    android:layout_marginTop="12dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fillViewport="true"
                    android:scrollbars="none">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:gravity="center_vertical"
                            android:paddingVertical="6dp"
                            android:paddingHorizontal="12dp"
                            android:background="@drawable/bgr_selected"
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:orientation="horizontal">
                            <Button
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:background="@drawable/ic_like"/>
                            <TextView
                                android:id="@+id/tv_like"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="12dp"
                                android:textColor="@color/black"
                                android:text="@string/text_like_load"
                                android:textSize="12sp"/>
                            <RelativeLayout
                                android:layout_marginHorizontal="12dp"
                                android:background="@color/d9"
                                android:layout_width="1dp"
                                android:layout_height="match_parent"/>
                            <Button
                                android:rotation="180"
                                android:layout_width="22dp"
                                android:layout_height="20dp"
                                android:background="@drawable/ic_like"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_marginLeft="12dp"
                            android:gravity="center_vertical"
                            android:paddingVertical="6dp"
                            android:paddingHorizontal="12dp"
                            android:background="@drawable/bgr_selected"
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:orientation="horizontal">
                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:src="@drawable/ic_share"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="6dp"
                                android:textColor="@color/black"
                                android:text="Chia sẻ"
                                android:textSize="12sp"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_marginLeft="12dp"
                            android:gravity="center_vertical"
                            android:paddingVertical="6dp"
                            android:paddingHorizontal="12dp"
                            android:background="@drawable/bgr_selected"
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:orientation="horizontal">
                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:src="@drawable/ic_download"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="6dp"
                                android:textColor="@color/black"
                                android:text="@string/text_download"
                                android:textSize="12sp"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_marginLeft="12dp"
                            android:gravity="center_vertical"
                            android:paddingVertical="6dp"
                            android:paddingHorizontal="12dp"
                            android:background="@drawable/bgr_selected"
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:orientation="horizontal">
                            <ImageView
                                android:rotation="90"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:src="@drawable/ic_cut"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="6dp"
                                android:textColor="@color/black"
                                android:text="@string/text_create_a_video"
                                android:textSize="12sp"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_marginLeft="12dp"
                            android:gravity="center_vertical"
                            android:paddingVertical="6dp"
                            android:paddingHorizontal="12dp"
                            android:background="@drawable/bgr_selected"
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:orientation="horizontal">
                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:src="@drawable/ic_add"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="6dp"
                                android:textColor="@color/black"
                                android:text="Lưu"
                                android:textSize="12sp"/>
                        </LinearLayout>
                    </LinearLayout>
                </HorizontalScrollView>
                <Button
                    android:text=" "
                    android:id="@+id/btn_next_item"
                    android:layout_alignParentEnd="true"
                    android:layout_width="36dp"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@drawable/bgr_img_btn_category"
                    android:drawableEnd="@drawable/baseline_chevron_right"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp"
                android:background="@drawable/bgr_comment">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:text="@string/text_comment"/>
                    <TextView
                        android:id="@+id/tv_comment"
                        android:layout_marginLeft="12dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/text_comment_load"/>
                </LinearLayout>
                <LinearLayout
                    android:gravity="center_vertical"
                    android:layout_marginTop="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/img_thumbnail_channel_comment"
                        android:scaleType="centerCrop"
                        android:layout_gravity="center_vertical"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@color/black"
                        app:shapeAppearanceOverlay="@style/rounde_comment"/>
                    <TextView
                        android:paddingVertical="6dp"
                        android:paddingHorizontal="12dp"
                        android:background="@drawable/bgr_add_comment"
                        android:layout_marginLeft="12dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_write_comment"
                        android:textColor="@color/black"
                        android:textSize="12sp"/>
                </LinearLayout>
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:scrollbars="none"
                android:scrollbarDefaultDelayBeforeFade="@integer/material_motion_duration_long_1"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rcv_randomVideo"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>